# api_authentication

./: pyproject.toml  requirements.txt
src/: utils.py
src/api_auth_login/: app.py
tests/: teste.py
