[project]
name = "api_auth_login"
version = "0.0.1"
description = "api_auth_login"
readme = "README.md"
license = "MIT"
authors = [{ name = "Leandro Tomasetto", email = "leandrotomasetto@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "flask==3.0.3",
    "flask-sqlalchemy==3.1.1",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary>=2.9.10",
    "pyjwt==2.8.0",
    "python-dotenv==1.0.1",
    "werkzeug==3.0.1",
]

[project.urls]
Homepage = "https://www.otaviomiranda.com.br/"

[project.optional-dependencies]
dev = ["ruff", "pyright", "pytest", "pytest-xdist"]

[project.scripts]
api_auth_login = "api_auth_login.main:run"

[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = [
    "ASYNC",
    "A",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "FIX",
    "I",
    "ICN",
    "ISC",
    "Q",
    "RET",
    "RSE",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TC",
    "TD",
    "TRY",
    "UP",
    "W",
    "YTT",
    "RUF",
    "N",
]
# Adicionamos 'ANN' aqui para ignorar todas as regras de anotação de tipo (parâmetros, retornos, etc.).
# Removemos 'ANN' do 'select' para que não precise ser ignorado individualmente.
ignore = ["T201", "COM812", "ANN", "E501", "ERA001", "Q000", "S201"]

[tool.ruff.lint.per-file-ignores]
# Mantemos as exceções para testes que ainda podem ser úteis,
# embora 'ANN' globalmente já cubra ANN201.
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
# Ensina ao Ruff qual é o pacote principal do seu projeto.
# Deve ser o mesmo nome da pasta dentro de 'src/'.
known-first-party = ["api_auth_login"]


# ============================
# Tipagem (Pyright)
# ============================
[tool.pyright]
typeCheckingMode = "basic" # Pyright no modo basic é menos rigoroso.
pythonVersion = "3.13"
include = ["src", 'tests']
exclude = [
    "**/venv",
    "**/.venv",
    "**/env",
    "**/.env",
    "**/node_modules",
    "**/__pycache__",
]
venv = ".venv"
venvPath = "."
executionEnvironments = [{ root = "src" }]

# ============================
# Testes (Pytest)
# ============================
[tool.pytest.ini_options]
addopts = "-s --color=yes --tb=short"
# Adiciona 'src' ao path do Python durante os testes. Isso permite que
# os testes em `tests/` importem os módulos de `src/` sem erros.
pythonpath = ["src"]
testpaths = ["tests"]


# ============================
# Build e Setuptools
# ============================
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# Informa ao setuptools para encontrar os pacotes dentro da pasta 'src'.
# Essencial para a estrutura de layout com 'src/'.
where = ["src"]

[tool.setuptools]
# Mapeia o diretório raiz de pacotes para 'src'.
package-dir = { "" = "src" }
